--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,12 +19,54 @@ html, body {
     font-weight: normal;
 }
 .container {
-    width: 1200px;
     margin: 0px auto;
+    padding: 0px 16px;
+}
+
+@media screen and (min-width: 576px) {
+    .container {
+        width: 544px;
+    }
+}
+@media screen and (min-width: 768px) {
+    .container {
+        width: 736px;
+    }
+}
+@media screen and (min-width: 992px) {
+    .container {
+        width: 944px;
+        padding: 0px 24px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1136px;
+        padding: 0px 32px;
+    }
+}
+@media screen and (min-width: 1400px) {
+    .container {
+        width: 1336px;
+    }
 }
 
 /* button */
-.btn {}
+.btn.btn--primary {
+    font-family: 'Quicksand';
+    font-weight: bold;
+    color: #3A79FF;
+    font-size: 13px;
+    background-color: #D2E1FF;
+    border: none;
+    border-radius: 2px;
+    width: 112px;
+    height: 42px;
+}
+
+.btn.btn--primary:hover {
+    cursor: pointer;
+}
 
 /* header */
 .header {
@@ -38,6 +80,7 @@ html, body {
 .header .container {
     display: flex;
     justify-content: space-between;
+    position: static;
 }
 
 /* header left */
@@ -48,16 +91,56 @@ html, body {
 
 .logo {
     display: flex;
-    margin-right: 72px;
+    margin-right: 24px;
 }
 
-.logo__picture .logo__item {
-    margin-right: 42px;
+.burger {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 60px;
+    width: 80px;
+    margin: 5px;
+    flex-shrink: 0;
+    cursor: pointer;
+}
+
+.burger .bar {
+    display: flex;
+    width: 40px;
+    height: 5px;
+    background-color: #5E81FE;
+    margin: 3px 0;
+    transition: 0.1s;
+}
+
+.burger.burger--open .bar {
+    width: 30px;
+    border-radius: 20px;
+}
+.burger.burger--open .bar:nth-child(1) {
+    transform: rotateZ(45deg) translate(7.5px, 7.5px);
+}
+.burger.burger--open .bar:nth-child(2) {
+    transform: translateX(0px) rotateZ(45deg);
+}
+.burger.burger--open .bar:nth-child(3) {
+    transform: rotateZ(-45deg) translate(7.5px, -7.5px);
 }
 
 .nav {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    font-size: 16px;
+    padding: 0px 16px;
+    top: 80px;
+    left: 0px;
+}
+
+.burger.burger--open+.nav {
     display: flex;
-    font-size: 12px;
 }
 
 a.nav__item {
@@ -87,31 +170,74 @@ a.nav__item.nav-item--active {
 
 .socials {
     display: flex;
-    margin-right: 42px;
-    /* align-items: center; */
-    /* justify-content: center; */
+    margin-right: 24px;
 }
 
-/* .socials__item {
+.socials__item {
+    display: flex;
     align-items: center;
-} */
+}
 
 .socials__item:not(:last-child) {
-    margin-right: 32px;
+    margin-right: 16px;
 }
 
-button.btn.btn--primary {
-    font-family: 'Quicksand';
-    font-weight: bold;
-    color: #3A79FF;
-    font-size: 13px;
-    background-color: #D2E1FF;
-    border: none;
-    border-radius: 2px;
-    width: 112px;
-    height: 42px;
+@media screen and (min-width: 576px) {}
+@media screen and (min-width: 768px) {
+    .nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        height: 60px;
+        width: 100%;
+    }
 }
+@media screen and (min-width: 992px) {
+    .burger {
+        display: none;
+    }
 
-button.btn.btn--primary:hover {
-    cursor: pointer;
+    .nav {
+        display: flex;
+        position: static;
+        padding: 0px;
+    }
 }
+@media screen and (min-width: 1200px) {
+    .logo {
+        margin-right: 72px;
+    }
+    
+    .nav {
+        font-size: 12px;
+    }
+    
+    a.nav__item {
+        color: #697CA6;
+        text-decoration: none;
+    }
+    
+    .nav .nav__item:not(:last-child) {
+        margin-right: 42px;
+    }
+    
+    a.nav__item.nav-item--active {
+        color: #5E81FE;
+        font-weight: bold;
+    }
+    
+    .nav__item:hover {
+        cursor: pointer;
+        color: #334A79;
+    }
+    
+    .socials {
+        margin-right: 42px;
+    }
+    
+    .socials__item:not(:last-child) {
+        margin-right: 32px;
+    }
+}
+@media screen and (min-width: 1400px) {}
